[package]
name = "td-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "*"
cxx = "1"
monome-rs = "1.1"

[build-dependencies]
cxx-build = "1"

[workspace]
members = [
    "plugins/chop/lasercube",
    "td-rs-autocxx-build",
    "td-rs-base",
    "td-rs-chop",
    "td-rs-dat",
    "td-rs-derive",
    "td-rs-derive-py",
    "td-rs-sop",
    "td-rs-top",
    "td-rs-xtask",
    "xtask",
]
