[package]
name = "unreal-engine-connection"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "chop"

[lib]
name = "unreal_engine_connection"
crate-type = ["staticlib"]


[dependencies]
td-rs-chop = { path = "../../../td-rs-chop", features = ["python"] }
td-rs-derive = { path = "../../../td-rs-derive" }
pyo3-ffi = "0.20.3"